Views_function_add

--- a/Dong/Views/Blogs/Details.cshtml
+++ b/Dong/Views/Blogs/Details.cshtml
@@ -28,6 +28,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Views)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Contents)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Contents)
+        </dd>
     </dl>
 </div>
 <div>
