--- a/Dong/Views/Home/Index.cshtml
+++ b/Dong/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+	<div class="row">
+	<div class="text-center">
+		<h1 class="display-4">
+			김동현
+			<br>
+			프로그래밍 블로그
+		</h1>
+
+		</div>
+	</div>
 </div>
