--- a/Dong/Views/Blogs/Create.cshtml
+++ b/Dong/Views/Blogs/Create.cshtml
@@ -25,11 +25,14 @@
 				<input asp-for="Date" class="form-control" />
 				<span asp-validation-for="Date" class="text-danger"></span>
 			</div>
-
-
+			<div class="form-group">
+				<label asp-for="Category" class="control-label"></label>
+				<input asp-for="Category" class="form-control" />
+				<span asp-validation-for="Category" class="text-danger"></span>
+			</div>
 			<div class="form-group">
 				<label asp-for="Contents" class="control-label"></label>
-				<textarea asp-for="Contents" class="form-control" id="summernote"><p></p></textarea>
+				<textarea asp-for="Contents" class="form-control" id="summernote"></textarea>
 				<span asp-validation-for="Contents" class="text-danger"></span>
 			</div>
 
