--- a/Dong/Views/Blogs/Details.cshtml
+++ b/Dong/Views/Blogs/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Views)
         </dt>
         <dd class = "col-sm-10">
