--- a/Dong/Views/Blogs/Edit.cshtml
+++ b/Dong/Views/Blogs/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Contents" class="control-label"></label>
                 <input asp-for="Contents" class="form-control" />
                 <span asp-validation-for="Contents" class="text-danger"></span>
